test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-borrowed.chpl
//  lhs: owned!  rhs: borrowed!  error: mm

class MyClass {  var x: int;  }

var obj = new MyClass(); var rhs = obj.borrow();

record MyRecord {
  var lhs: owned MyClass = rhs;
}

var myr = new MyRecord();

compilerError("done");
