test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-borrowed.good
init-field-dflt-nonnil-owned-from-nonnil-borrowed.chpl:8: error: Cannot initialize 'lhs' of type owned MyClass from a 'borrowed MyClass'
